<resources>
    <string name="app_name">BLE Pickit</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="bluetooth_guide_title">LOCATION DISABLED</string>
    <string name="bluetooth_guide_location_info">Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices. Click the button below to enable Location.</string>
    <string name="bluetooth_guide_location_action">Enable</string>
</resources>
