<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingEnd="16dp"
	android:paddingStart="16dp"
	tools:ignore="ContentDescription"
	android:layout_gravity="center"
	android:gravity="center">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:padding="16dp"
		android:src="@drawable/ic_location_off"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="@string/location_permission_title"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:layout_marginTop="16dp"
		android:gravity="center"
		android:text="@string/location_permission_info"/>

	<Button
		android:id="@+id/action_grant_location_permission"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/location_permission_action"/>

	<Button
		android:id="@+id/action_permission_settings"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/location_permission_settings"
		android:visibility="visible"/>
</LinearLayout>